dodat predmet u 3. godini

--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
             <ul>
                 <!--
                 <li class="predmeti">Verovatnoća</li>
-                <li class="predmeti">Konstrukcija i analiza algoritama</li>
                 -->
                 <li class="predmeti" id="stat">Statistika</li>
                 <ul id="statmat">
@@ -181,6 +180,7 @@
                 </ul>
                 <li class="predmeti" id="vi">Veštačka inteligencija</li>
                 <ul id="vimat">
+                    <li class="materijali"><a href="materijali/3. godina/vivezbe.zip" target="_blank">vežbe</a></li>
                     <li class="materijali"><a href="materijali/3. godina/vi_odgovori.pdf" target="_blank">odgovori na pitanja iz knjige</a></li>
                 </ul>
                 <li class="predmeti" id="ip1">Istraživanje podataka 1</li>
@@ -198,15 +198,19 @@
                     <li class="materijali"><a href="materijali/3. godina/sql.zip" target="_blank">SQL kodovi</a></li>
                     <li class="materijali"><a href="materijali/3. godina/RBP_odgovori_na_pitanja.pdf" target="_blank">beleške sa predavanja</a></li>
                 </ul>
+                <li class="predmeti" id="unm">Uvod u numeričku matematiku</li>
+                <ul id="unmmat">
+                    <li class="materijali"><a href="materijali/3. godina/unm_predavanja.pdf" target="_blank">predavanja</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/matlab.zip" target="_blank">MatLab kodovi</a></li>
+                </ul>
                 <li class="predmeti" id="ppj">Prevođenje programskih jezika</li>
                 <ul id="ppjmat">
                     <li class="materijali"><a href="materijali/3. godina/ppjvezbe.zip" target="_blank">kodovi</a></li>
                     <li class="materijali"><a href="materijali/3. godina/ppjpredavanja.pdf" target="_blank">predavanja</a></li>
                 </ul>
-                <li class="predmeti" id="unm">Uvod u numeričku matematiku</li>
-                <ul id="unmmat">
-                    <li class="materijali"><a href="materijali/3. godina/unm_predavanja.pdf" target="_blank">predavanja</a></li>
-                    <li class="materijali"><a href="materijali/3. godina/matlab.zip" target="_blank">MatLab kodovi</a></li>
+                <li class="predmeti" id="kiaa">Konstrukcija i analiza algoritama</li>
+                <ul id="kiaamat">
+                    <li class="materijali"><a href="materijali/3. godina/kiaavezbe.zip" target="_blank">vežbe</a></li>
                 </ul>
             </ul>
         </div>
