--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mina Milošević</title>
+    <title>Mina Milošević 81/2017</title>
     <link rel="stylesheet" type="text/css" href="stil.css">
     <script src="jquery-3.4.1.js"></script>
     <script type="text/javascript" src="akcije.js"></script>
 
     <style type="text/css">
-        @media screen and (max−width: 400px) {
-            #nav, #prva, #druga, #treca {
-                width: 100%;
+        @media screen and (max-width: 400px) {
+            #nav, #prva, #druga, #treca, #cetvrta {
                 display: block;
+                width: 100%;
             }
         }
 
-        @media screen and (min−width: 401px) and (max-width: 700px) {
+        @media screen and (min-width: 401px) and (max-width: 700px) {
             #naslov {
                 width: 100%;
             }
             #prva, #druga {
                 display: inline-block;
-                width: 50%;
+                width: 100%;
             }
-            #treca {
-                display: block;
-                width: 50%;
+            #treca, #cetvrta {
+                display: inline-block;
+                width: 100%;
             }
         }
 
@@ -35,9 +35,9 @@
             #naslov {
                 width: 100%;
             }
-            #prva, #druga, #treca {
+            #prva, #druga, #treca, #cetvrta {
                 display: inline-block;
-                width: 30%;
+                width: 40%;
             }
         }
     </style>
@@ -166,12 +166,15 @@
         <div class="godine" id="treca">
             <h3>3. godina (2019/2020)</h3>
             <ul>
-                <!--
-                <li class="predmeti">Verovatnoća</li>
-                -->
                 <li class="predmeti" id="stat">Statistika</li>
                 <ul id="statmat">
-                    <li class="materijali"><a href="materijali/3. godina/statvezbe.zip" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/statvezbe.zip" target="_blank">vežbe (kodovi)</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/statvezbe.pdf" target="_blank">vežbe (sveska)</a></li>
+                </ul>
+                <li class="predmeti" id="verov">Verovatnoća</li>
+                <ul id="verovmat">
+                    <li class="materijali"><a href="materijali/3. godina/verovatnoca_vezbe.pdf" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="" target="_blank" style="color: slategrey;">predavanja</a></li>
                 </ul>
                 <li class="predmeti" id="rg">Računarska grafika</li>
                 <ul id="rgmat">
@@ -215,13 +218,14 @@
             </ul>
         </div>
 
-        <!--
         <div class="godine" id="cetvrta">
-            <h3>4. godina</h3>
+            <h3>4. godina (2020/2021)</h3>
         </div>
-        -->
+       
 
     </nav>
+
+    <!-- TODO: footer sa informacijama -->
 
 </body>
 </html>
