--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
 
         <div class="godine" id="cetvrta">
             <h3>4. godina (2020/2021)</h3>
+            <li class="predmeti" id="ppgr">Primena projektivne geometrije u računarstvu</li>
+                <ul id="ppgrmat">
+                <li class="materijali"><a href="materijali/4. godina/ppgr_vezbe.pdf" target="_blank">vežbe</a></li>
+            </ul>
         </div>
        
 
