--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
         <div class="godine" id="cetvrta">
             <h3>4. godina (2020/2021)</h3>
             <ul>
+                <li class="predmeti" id="ri">Računarska inteligencija</li>
+                <ul id="rimat">
+                    <li class="materijali"><a href="materijali/4. godina/ri_vezbe.zip" target="_blank">vežbe</a></li>
+                </ul>
                 <li class="predmeti" id="ppgr">Primena projektivne geometrije u računarstvu</li>
                 <ul id="ppgrmat">
                     <li class="materijali"><a href="materijali/4. godina/ppgr_vezbe.pdf" target="_blank">vežbe</a></li>
