dodati novi predmeti za 4. godinu i link za gitlab

--- a/index.html
+++ b/index.html
@@ -56,22 +56,14 @@
     <div id="naslov">
         <p id="imePrezime">Mina Milošević</p>
 
-        <!-- 
-        <p class="mejl" id="mejl1"><a href="mailto:mi17081@alas.matf.bg.ac.rs" class="mejllink">mi17081@alas.matf.bg.ac.rs</a></p>
-        <p class="mejl" id="mejl2"><a href="mailto:mina.milosevic998@gmail.com" class="mejllink">mina.milosevic998@gmail.com</a></p>
-        -->
         <p class="ikonice">
         <a href="http://www.matf.bg.ac.rs/" target="_blank"><img alt="matf" src="ikonice/matf.png" title="matf sajt" id="matfSlika"></a> 
         <a href="mailto:mi17081@alas.matf.bg.ac.rs" target="_blank"><img alt="alas" src="ikonice/alas.png" title="alas mail" id="alasSlika"></a>
         <a href="mailto:mina.milosevic998@gmail.com" target="_blank"><img alt="gmail" src="ikonice/gmail.png" title="gmail" id="gmailSlika"></a>
         <a href="https://github.com/sardothien" target="_blank"><img alt="github" src="ikonice/github.png" title="github" id="githubSlika"></a> 
+        <a href="https://gitlab.com/mina.milosevic" target="_blank"><img alt="gitlab" src="ikonice/gitlab.png" title="gitlab" id="gitlabSlika"></a> 
         </p>
-        <!--
-        <p id="opis">
-            Ako Vam je potreban neki od fajlova u odt formatu, rokovi/kodovi sa ovih kurseva ili imate<br>
-            neka dodatna pitanja, slobodno posaljite poruku na bilo koji od ova dva email-a.
-        </p>
-        -->
+
     </div>
     </header>
 
@@ -149,7 +141,7 @@
                 <li class="predmeti" id="oas">Osnovi astronomije</li>
                 <ul id="oasmat">
                     <li class="materijali"><a href="materijali/2. godina/astronomija_seminarski.pdf" target="_blank">seminarski</a></li>
-                    <li class="materijali"><a href="materijali/2. godina/Astronomija_vezbe.pdf" target="_blank">skripta sa vezbi</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/Astronomija_vezbe.pdf" target="_blank">skripta sa vežbi</a></li>
                 </ul>
                 <li class="predmeti" id="aisp">Algoritmi i strukture podataka</li>
                 <ul id="aispmat">
@@ -221,9 +213,21 @@
         <div class="godine" id="cetvrta">
             <h3>4. godina (2020/2021)</h3>
             <ul>
-                <li class="predmeti" id="ri">Računarska inteligencija</li>
+                <!-- <li class="predmeti" id="ri">Računarska inteligencija</li>
                 <ul id="rimat">
-                    <li class="materijali"><a href="materijali/4. godina/ri_vezbe.zip" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/4. godina/" target="_blank">projekat</a></li>
+                </ul> -->
+                <li class="predmeti" id="rs">Razvoj softvera</li>
+                <ul id="rsmat">
+                    <li class="materijali"><a href="https://gitlab.com/matf-bg-ac-rs/course-rs/projects-2020-2021/06-timesweeper" target="_blank">projekat</a></li>
+                </ul>
+                <li class="predmeti" id="azrs">Alati za razvoj softvera</li>
+                <ul id="azrsmat">
+                    <li class="materijali"><a href="materijali/4. godina/azrs_predavanja.pdf" target="_blank">beleške sa predavanja</a></li>
+                </ul>
+                <li class="predmeti" id="fp">Funkcionalno programiranje</li>
+                <ul id="fpmat">
+                    <li class="materijali"><a href="materijali/4. godina/fp_predavanja.pdf" target="_blank">beleške sa predavanja</a></li>
                 </ul>
                 <li class="predmeti" id="ppgr">Primena projektivne geometrije u računarstvu</li>
                 <ul id="ppgrmat">
