--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 -->
                 <li class="predmeti" id="a1">Analiza 1</li>
                 <ul id="a1mat">
-                    <li class="materijali"><a href="materijali/1. godina/a1vezbe.pdf" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/a1vezbe.pdf" target="_blank">vežbe (sveska)</a></li>
                 </ul>
                 <li class="predmeti" id="engl1">Engleski jezik 1</li>
                 <ul id="engl1mat">
@@ -91,25 +91,25 @@
                 </ul>
                 <li class="predmeti" id="p1">Programiranje 1</li>
                 <ul id="p1mat">
-                    <li class="materijali"><a href="materijali/1. godina/p1.zip" target="_blank">kodovi</a></li>
-                    <li class="materijali"><a href="materijali/1. godina/urm.pdf" target="_blank">urm zadaci</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/urm.pdf" target="_blank">vežbe (urm)</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/p1.zip" target="_blank">vežbe i rokovi</a></li>
                     <li class="materijali"><a href="materijali/1. godina/p1pitanja.pdf" target="_blank">odgovori na pitanja iz knjige</a></li>
                 </ul>
                 <li class="predmeti" id="p2">Programiranje 2</li>
                 <ul id="p2mat">
-                    <li class="materijali" ><a href="materijali/1. godina/p2.zip" target="_blank">kodovi</a></li>
+                    <li class="materijali" ><a href="materijali/1. godina/p2.zip" target="_blank">vežbe i rokovi</a></li>
                     <li class="materijali"><a href="materijali/1. godina/p2pitanja.pdf" target="_blank">odgovori na pitanja iz knjige</a></li>
                 </ul>
                 <li class="predmeti" id="uor1">Uvod u organizaciju i arhitekturu računara 1</li>
                 <ul id="uor1mat">
-                    <li class="materijali"><a href="materijali/1. godina/uor1vezbe.pdf" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/uor1vezbe.pdf" target="_blank">vežbe (sveska)</a></li>
                     <li class="materijali"><a href="materijali/1. godina/uor1pitanja.pdf" target="_blank">česta pitanja i odgovori sa rokova</a></li>
                 </ul>
                 <li class="predmeti" id="uor2">Uvod u organizaciju i arhitekturu računara 2</li>
                 <ul id="uor2mat">
-                    <li class="materijali"><a href="materijali/1. godina/uor2pitanja.pdf" target="_blank">pitanja i odgovori</a></li>
-                    <li class="materijali"><a href="materijali/1. godina/asembler.zip" target="_blank">zadaci iz asemblera</a></li>
-                    <li class="materijali"><a href="materijali/1. godina/logisim.zip" target="_blank">zadaci iz Logisim-a</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/logisim.zip" target="_blank">vežbe (Logisim)</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/asembler.zip" target="_blank">vežbe (asembler)</a></li>
+                    <li class="materijali"><a href="materijali/1. godina/uor2pitanja.pdf" target="_blank">odgovori na ispitna pitanja</a></li>
                 </ul>
             </ul>
         </div>
@@ -122,26 +122,25 @@
                 -->
                 <li class="predmeti" id="alg1">Algebra 1</li>
                 <ul id="alg1mat">
-                    <li class="materijali"><a href="materijali/2. godina/algebra odgovori.pdf" target="_blank">pitanja i odgovori za usmeni</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/algebra odgovori.pdf" target="_blank">odgovori na ispitna pitanja</a></li>
                 </ul>
                 <li class="predmeti" id="a2">Analiza 2</li>
                 <ul id="a2mat">
-                    <li class="materijali"><a href="materijali/2. godina/a2.pdf" target="_blank">predavanja</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/a2.pdf" target="_blank">predavanja (sveska)</a></li>
                 </ul>
                 <li class="predmeti" id="geom">Geometrija</li>
                 <ul id="geommat">
-                    <li class="materijali"><a href="materijali/2. godina/geometrija.pdf" target="_blank">predavanja</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/geometrija.pdf" target="_blank">predavanja (sveska)</a></li>
                 </ul>   
                 <li class="predmeti" id="os">Operativni sistemi</li>
                 <ul id="osmat">
                     <li class="materijali"><a href="materijali/2. godina/osvezbe.zip" target="_blank">vežbe i rokovi</a></li> 
-                    <li class="materijali"><a href="materijali/2. godina/OS_pitanja_knjiga.pdf" target="_blank">pitanja i odgovori iz knjige</a></li>
-                    <li class="materijali"><a href="materijali/2. godina/OS_ispitna_pitanja.pdf" target="_blank">pitanja i odgovori sa rokova</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/OS_ispitna_pitanja.pdf" target="_blank">česta pitanja sa usmenog</a></li>
                 </ul>                    
                 <li class="predmeti" id="oas">Osnovi astronomije</li>
                 <ul id="oasmat">
                     <li class="materijali"><a href="materijali/2. godina/astronomija_seminarski.pdf" target="_blank">seminarski</a></li>
-                    <li class="materijali"><a href="materijali/2. godina/Astronomija_vezbe.pdf" target="_blank">skripta sa vežbi</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/Astronomija_vezbe.pdf" target="_blank">vežbe (skripta)</a></li>
                 </ul>
                 <li class="predmeti" id="aisp">Algoritmi i strukture podataka</li>
                 <ul id="aispmat">
@@ -150,7 +149,7 @@
                 </ul>
                 <li class="predmeti" id="oop">Objektno orijentisano programiranje</li>
                 <ul id="oopmat">
-                    <li class="materijali"><a href="materijali/2. godina/oopvezbe.zip" target="_blank">kodovi sa vežbi</a></li>
+                    <li class="materijali"><a href="materijali/2. godina/oopvezbe.zip" target="_blank">vežbe i rokovi</a></li>
                 </ul>
             </ul>
         </div>
@@ -165,8 +164,8 @@
                 </ul>
                 <li class="predmeti" id="verov">Verovatnoća</li>
                 <ul id="verovmat">
-                    <li class="materijali"><a href="materijali/3. godina/verovatnoca_vezbe.pdf" target="_blank">vežbe</a></li>
-                    <li class="materijali"><a href="" target="_blank" style="color: slategrey;">predavanja</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/verovatnoca_vezbe.pdf" target="_blank">vežbe (sveska)</a></li>
+                    <!-- <li class="materijali"><a href="" target="_blank" style="color: slategrey;">predavanja (sveska)</a></li> -->
                 </ul>
                 <li class="predmeti" id="rg">Računarska grafika</li>
                 <ul id="rgmat">
@@ -175,37 +174,32 @@
                 </ul>
                 <li class="predmeti" id="vi">Veštačka inteligencija</li>
                 <ul id="vimat">
-                    <li class="materijali"><a href="materijali/3. godina/vivezbe.zip" target="_blank">vežbe</a></li>
                     <li class="materijali"><a href="materijali/3. godina/vi_odgovori.pdf" target="_blank">odgovori na pitanja iz knjige</a></li>
                 </ul>
                 <li class="predmeti" id="ip1">Istraživanje podataka 1</li>
                 <ul id="ip1mat">
-                    <li class="materijali"><a href="materijali/3. godina/ip1vezbe.zip" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/ip1vezbe.zip" target="_blank">vežbe (Python i SPSS)</a></li>
                 </ul>
                 <li class="predmeti" id="pp">Programske paradigme</li>
                 <ul id="ppmat">
-                    <li class="materijali"><a href="materijali/3. godina/ppvezbe.zip" target="_blank">kodovi</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/ppvezbe.zip" target="_blank">vežbe i rokovi</a></li>
                     <li class="materijali"><a href="materijali/3. godina/lambdaRacun.pdf" target="_blank">zadaci iz lambda računa</a></li>
                     <li class="materijali"><a href="materijali/3. godina/pp_odgovori.pdf" target="_blank">odgovori na pitanja sa prezentacija</a></li>
                 </ul>
                 <li class="predmeti" id="rbp">Relacione baze podataka</li>
                 <ul id="rbpmat">
-                    <li class="materijali"><a href="materijali/3. godina/sql.zip" target="_blank">SQL kodovi</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/sql.zip" target="_blank">vežbe</a></li>
                     <li class="materijali"><a href="materijali/3. godina/RBP_odgovori_na_pitanja.pdf" target="_blank">beleške sa predavanja</a></li>
                 </ul>
                 <li class="predmeti" id="unm">Uvod u numeričku matematiku</li>
                 <ul id="unmmat">
-                    <li class="materijali"><a href="materijali/3. godina/unm_predavanja.pdf" target="_blank">predavanja</a></li>
-                    <li class="materijali"><a href="materijali/3. godina/matlab.zip" target="_blank">MatLab kodovi</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/matlab.zip" target="_blank">vežbe (Matlab)</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/unm_predavanja.pdf" target="_blank">predavanja (sveska)</a></li>
                 </ul>
                 <li class="predmeti" id="ppj">Prevođenje programskih jezika</li>
                 <ul id="ppjmat">
-                    <li class="materijali"><a href="materijali/3. godina/ppjvezbe.zip" target="_blank">kodovi</a></li>
-                    <li class="materijali"><a href="materijali/3. godina/ppjpredavanja.pdf" target="_blank">predavanja</a></li>
-                </ul>
-                <li class="predmeti" id="kiaa">Konstrukcija i analiza algoritama</li>
-                <ul id="kiaamat">
-                    <li class="materijali"><a href="materijali/3. godina/kiaavezbe.zip" target="_blank">vežbe</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/ppjvezbe.zip" target="_blank">vežbe i rokovi</a></li>
+                    <li class="materijali"><a href="materijali/3. godina/ppjpredavanja.pdf" target="_blank">predavanja (sveska)</a></li>
                 </ul>
             </ul>
         </div>
@@ -213,10 +207,6 @@
         <div class="godine" id="cetvrta">
             <h3>4. godina (2020/2021)</h3>
             <ul>
-                <!-- <li class="predmeti" id="ri">Računarska inteligencija</li>
-                <ul id="rimat">
-                    <li class="materijali"><a href="materijali/4. godina/" target="_blank">projekat</a></li>
-                </ul> -->
                 <li class="predmeti" id="rs">Razvoj softvera</li>
                 <ul id="rsmat">
                     <li class="materijali"><a href="https://gitlab.com/matf-bg-ac-rs/course-rs/projects-2020-2021/06-timesweeper" target="_blank">projekat</a></li>
@@ -225,14 +215,26 @@
                 <ul id="azrsmat">
                     <li class="materijali"><a href="materijali/4. godina/azrs_predavanja.pdf" target="_blank">beleške sa predavanja</a></li>
                 </ul>
+                <li class="predmeti" id="ri">Računarska inteligencija</li>
+                <ul id="rimat">
+                    <li class="materijali"><a href="https://github.com/sardothien/RI-RegexGolf" target="_blank">projekat</a></li>
+                </ul> 
+                <li class="predmeti" id="kk">Konstrukcija kompilatora</li>
+                <ul id="kkmat">
+                    <li class="materijali"><a href="materijali/4. godina/KK_odgovori_na_pitanja.pdf" target="_blank">odgovori na ispitna pitanja</a></li>
+                </ul> 
                 <li class="predmeti" id="fp">Funkcionalno programiranje</li>
                 <ul id="fpmat">
                     <li class="materijali"><a href="materijali/4. godina/fp_predavanja.pdf" target="_blank">beleške sa predavanja</a></li>
                 </ul>
+                <li class="predmeti" id="projbp">Projektovanje baza podataka</li>
+                <ul id="projbpmat">
+                    <li class="materijali"><a href="materijali/4. godina/PBP_odgovori_na_pitanja.pdf" target="_blank">odgovori na ispitna pitanja</a></li>
+                </ul> 
                 <li class="predmeti" id="ppgr">Primena projektivne geometrije u računarstvu</li>
                 <ul id="ppgrmat">
-                    <li class="materijali"><a href="materijali/4. godina/ppgr_vezbe.pdf" target="_blank">vežbe</a></li>
                     <li class="materijali"><a href="https://github.com/sardothien/MATF-materijali/tree/master/4.%20godina/ppgr%20domaci" target="_blank">domaći</a></li>
+                    <li class="materijali"><a href="materijali/4. godina/ppgr_vezbe.pdf" target="_blank">vežbe (sveska)</a></li>
                 </ul>
             </ul>
         </div>
